# zoneinfo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-publish.yml  python-tests.yml
docs/: changelog.rst  conf.py  index.rst  maintaining.rst  requirements.txt  zoneinfo.rst
lib/: zoneinfo_module.c
scripts/: benchmark.py  build_manylinux_wheels.sh  check_tag.py  rename_pypy_wheel.py  tag_release.sh  update_test_data.py  upload_codecov.py
src/backports/zoneinfo/: __init__.pyi  _common.py  _tzpath.py  _zoneinfo.py
src/zoneinfo/: __init__.py  __init__.pyi  _common.py  _tzpath.py  _zoneinfo.py
tests/: _support.py  test_zoneinfo.py  test_zoneinfo_property.py  typing_example.py
tests/data/: zoneinfo_data.json
