[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80

[tool.coverage.run]
omit = ["tests/typing_example.py"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
known_first_party = ["backports.zoneinfo"]
known_third_party=[
    "click",
    "dateutil",
    "hypothesis",
    "pint",
    "pytest",
    "pytz",
    "requests",
]
multi_line_output=3
not_skip="__init__.py"
use_parentheses=true
