[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backports.zoneinfo"
description = "Backport of the standard library zoneinfo module"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Python Software Foundation", email = "datetime-sig@python.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.6"
dependencies = [
    "importlib_resources;python_version<\"3.7\"",
]
license = {text = "Apache-2.0"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pganssle/zoneinfo"
Source = "https://github.com/pganssle/zoneinfo"
Documentation = "https://zoneinfo.readthedocs.io/en/latest/"
"Bug Reports" = "https://github.com/pganssle/zoneinfo/issues"

[project.optional-dependencies]
tzdata = [
    "tzdata",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}
license-files = ["LICENSE", "licenses/LICENSE_APACHE"]
dynamic = {version = {attr = "backports.zoneinfo._version.__version__"}}

[tool.black]
line-length = 80

[tool.coverage.run]
omit = ["tests/typing_example.py"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
known_first_party = ["backports.zoneinfo"]
known_third_party=[
    "click",
    "dateutil",
    "hypothesis",
    "pint",
    "pytest",
    "pytz",
    "requests",
]
multi_line_output=3
use_parentheses=true

[tool.pylint.'MESSAGES CONTROL']
disable="all"
enable="""
    unused-import,
    unused-variable,
    unpacking-non-sequence,
    invalid-all-object,
    used-before-assignment,
    no-else-raise,
    bad-format-character,
    bad-format-string,
    bare-except,
"""
