[metadata]
name = zoneinfo
version = attr:zoneinfo._version.__version__
description = Backport of the standard library zoneinfo module
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files =
    LICENSE
    licenses/LICENSE_APACHE
url = https://github.com/python/cpython
author = Python Software Foundation
author_email = datetime-sig@python.org
project_urls =
    Bug Reports = https://bugs.python.org
    Source = https://github.com/python/cpython
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir=
    =src
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
tzdata =
    tzdata @ git+https://github.com/pganssle/tzdata.git
