[metadata]
name = backports.zoneinfo
version = attr:backports.zoneinfo._version.__version__
description = Backport of the standard library zoneinfo module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pganssle/zoneinfo
author = Python Software Foundation
author_email = datetime-sig@python.org
license = Apache-2.0
license_file = LICENSE
license_files =
    LICENSE
    licenses/LICENSE_APACHE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source = https://github.com/pganssle/zoneinfo
    Documentation = https://zoneinfo.readthedocs.io/en/latest/
    Bug Reports = https://github.com/pganssle/zoneinfo/issues

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.extras_require]
tzdata =
    tzdata

[options.packages.find]
where = src
